fix vertical alignment of user icon in top nav
# Conflicts:
#	src/store/reducers/index.js

--- a/src/routes/PrimaryLayout/components/TopNav/component.scss
+++ b/src/routes/PrimaryLayout/components/TopNav/component.scss
@@ -50,6 +50,9 @@
 .navIcons {
   margin-left: auto;
   display: inline-block;
+  > * {
+    vertical-align: middle;
+  }
 }
 
 .navIcon, .navIcon:hover {
